API connected to DB
GET,POST,DELETE functions added for Category
